Modified the jupyter notebook

--- a/01_personas_and_AB_test.ipynb
+++ b/01_personas_and_AB_test.ipynb
@@ -5,16 +5,14 @@
    "id": "cfc64da9",
    "metadata": {},
    "source": [
-    "# A/B test of job offers using personas and LLM's\n",
+    "# A/B test of job descriptions using personas and LLM's\n",
     "\n",
     "\n",
     "## Project description\n",
     "\n",
     "In the evolving landscape of talent acquisition and job design, the utilization of advanced computational techniques, including Large Language Models (LLMs) and persona-based evaluation methods, represents a cutting-edge approach to optimizing job descriptions for various roles. This innovative methodology involves the creation of detailed personas, which encapsulate a wide range of candidate profiles, preferences, and competencies. These personas are then used in combinations with LLMs to assess and vote on job positions, determining which descriptions are more effective in attracting the right talent.\n",
     "\n",
-    "Mathias Schilling, 11.03.24\n",
-    "\n",
-    "\n"
+    "Mathias Schilling, 11.03.24"
    ]
   },
   {
